nats-micro/tests/ui/static_borrowed_request_spawn.stderr
error: lifetime may not live long enough
  --> tests/ui/static_borrowed_request_spawn.rs:36:13
   |
31 |       fn call<'a>(
   |               -- lifetime `'a` defined here
...
36 | /             tokio::spawn(async move {
37 | |                 use_after_request(request.body()).await;
38 | |             });
   | |______________^ argument requires that `'a` must outlive `'static`
